content/core/1.3.0/reference/vendr-core-services/analyticsservice.md
---
title: AnalyticsService
description: API reference for AnalyticsService in Vendr, the eCommerce solution for Umbraco v8+
---
## AnalyticsService

```csharp
public class AnalyticsService : ServiceBase, IAnalyticsService
```

**Inheritance**

* class [ServiceBase](../servicebase/)
* interface [IAnalyticsService](../ianalyticsservice/)

**Namespace**
* [Vendr.Core.Services](../)

### Constructors

#### AnalyticsService

```csharp
public AnalyticsService(IRepositoryFactory repositoryFactory, IUnitOfWorkProvider uowProvider, 
    ILogger logger, ICache cache, IStoreService storeService, ICurrencyService currencyService)
```


### Methods

#### GetAverageOrderValueReport

```csharp
public DateReportData<Amount> GetAverageOrderValueReport(Guid storeId, DateTime from, DateTime to, 
    DateTime? compareFrom, DateTime? compareTo)
```


---

#### GetCartConversionRatesReport

```csharp
public CartConversionRatesReportData GetCartConversionRatesReport(Guid storeId, DateTime from, 
    DateTime to, DateTime? compareFrom, DateTime? compareTo)
```


---

#### GetRepeatCustomerRatesReport

```csharp
public RepeatCustomerRatesReportData GetRepeatCustomerRatesReport(Guid storeId, DateTime from, 
    DateTime to, DateTime? compareFrom, DateTime? compareTo)
```


---

#### GetTopSellingProducts

```csharp
public ProductSalesReportData GetTopSellingProducts(Guid storeId, DateTime from, DateTime to, 
    DateTime? compareFrom, DateTime? compareTo)
```


---

#### GetTotalOrdersReport

```csharp
public DateReportData<long> GetTotalOrdersReport(Guid storeId, DateTime from, DateTime to, 
    DateTime? compareFrom, DateTime? compareTo)
```


---

#### GetTotalRevenueReport

```csharp
public DateReportData<Amount> GetTotalRevenueReport(Guid storeId, DateTime from, DateTime to, 
    DateTime? compareFrom, DateTime? compareTo)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
