content/core/1.8.0/reference/vendr-core-services/analyticsservice.md
---
title: AnalyticsService
description: API reference for AnalyticsService in Vendr, the eCommerce solution for Umbraco v8+
---
## AnalyticsService

```csharp
public class AnalyticsService : ServiceBase, IAnalyticsService
```

**Inheritance**

* class [ServiceBase](../servicebase/)
* interface [IAnalyticsService](../ianalyticsservice/)

**Namespace**
* [Vendr.Core.Services](../)

### Constructors

#### AnalyticsService

```csharp
public AnalyticsService(ILicensingService licensingService, IRepositoryFactory repositoryFactory, 
    IUnitOfWorkProvider uowProvider, ILogger logger, ICacheAccessor cacheAccessor, 
    IStoreService storeService, IProductService productService, ICurrencyService currencyService)
```


### Methods

#### GetAverageOrderValueReport

```csharp
public DateReportData<Amount> GetAverageOrderValueReport(Guid storeId, DateTime fromUtc, 
    DateTime toUtc, DateTime? compareFromUtc, DateTime? compareToUtc, int localTimezoneOffset)
```


---

#### GetCartConversionRatesReport

```csharp
public CartConversionRatesReportData GetCartConversionRatesReport(Guid storeId, DateTime fromUtc, 
    DateTime toUtc, DateTime? compareFromUtc, DateTime? compareToUtc, int localTimezoneOffset)
```


---

#### GetRepeatCustomerRatesReport

```csharp
public RepeatCustomerRatesReportData GetRepeatCustomerRatesReport(Guid storeId, DateTime fromUtc, 
    DateTime toUtc, DateTime? compareFromUtc, DateTime? compareToUtc, int localTimezoneOffset)
```


---

#### GetTopSellingProducts

```csharp
public ProductSalesReportData GetTopSellingProducts(Guid storeId, DateTime fromUtc, DateTime toUtc, 
    DateTime? compareFromUtc, DateTime? compareToUtc, int localTimezoneOffset)
```


---

#### GetTotalOrdersReport

```csharp
public DateReportData<long> GetTotalOrdersReport(Guid storeId, DateTime fromUtc, DateTime toUtc, 
    DateTime? compareFromUtc, DateTime? compareToUtc, int localTimezoneOffset)
```


---

#### GetTotalRevenueReport

```csharp
public DateReportData<Amount> GetTotalRevenueReport(Guid storeId, DateTime fromUtc, DateTime toUtc, 
    DateTime? compareFromUtc, DateTime? compareToUtc, int localTimezoneOffset)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
